@@ -12,6 +12,9 @@ fabricLoaderVersion=0.4.0+build.116
 fabricApiVersion=0.2.6.121
 refMapName=com.misterpemodder.fabric.refmap.json
 
+modMenuVersion=1.2.1-50
+clothConfigVersion=0.1.0.4
+
 pomName=Shulker Box Tooltip
 gitLink=MisterPeModder/ShulkerBoxTooltip
 mavenReleaseRepo=https://maven.misterpemodder.com/libs-release/
